# RTS

./: .clang-format  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: GCC Linux Build.yml  Windows Build.yml
DesignPatterns/: CMakeLists.txt  main.cpp
DesignPatterns/Adapter/: Adapter.hpp  CMakeLists.txt
DesignPatterns/Builder/: BlogPost.hpp  BlogPostBuilder.hpp  BlogPostBuilderCRTP.hpp  CMakeLists.txt
DesignPatterns/Factory/: CMakeLists.txt  LinuxWidgetsFactory.hpp  WidgetsFactoryAbstract.hpp  WindowsWidgetsFactory.hpp
DesignPatterns/Factory/LinuxWidgets/: CMakeLists.txt  LinuxButton.hpp  LinuxCheckBox.hpp  LinuxField.hpp  LinuxWidgets.hpp
DesignPatterns/Factory/Widgets.Static/: CMakeLists.txt
DesignPatterns/Factory/Widgets.Static/Include/WidgetsAbstract/: ButtonAbstract.hpp  FieldAbstract.hpp
DesignPatterns/Factory/WidgetsAbstract/: ButtonAbstract.hpp  CMakeLists.txt  CheckBoxAbstract.hpp  FieldAbstract.hpp
DesignPatterns/Factory/WindowsWidgets/: CMakeLists.txt  WindowsButton.hpp  WindowsCheckBox.hpp  WindowsField.hpp  WindowsWidgets.hpp
IntermediateProgram/: CMakeLists.txt
IntermediateProgram/1_ReadWriteFile/: CMakeLists.txt  CopyingTool.cpp  CopyingTool.hpp  FileReader.hpp  FileWriter.hpp  main.cpp
IntermediateProgram/2_ReadWriteShMem/: CMakeLists.txt  CopyingTool.cpp  CopyingTool.hpp  main.cpp
IntermediateProgram/3_ExceptionHandling/: CMakeLists.txt  CopyingTool.cpp  CopyingTool.hpp  ShMemReader.hpp  ShMemTerminationHandler.hpp  ShMemWriter.hpp  SharedMemoryData.hpp  TerminationManipulator.hpp  main.cpp
IntermediateProgram/4_Networking/: CMakeLists.txt
IntermediateProgram/4_Networking/Client/: CMakeLists.txt
IntermediateProgram/4_Networking/Client/Client.CLI/: App.cpp  App.hpp  CMakeLists.txt  MainClient.cpp
IntermediateProgram/4_Networking/Client/Client.Core/Client.Core.Static/: CMakeLists.txt  Client.cpp  Client.hpp  ServerInfo.hpp
IntermediateProgram/4_Networking/Network/: CMakeLists.txt
IntermediateProgram/4_Networking/Network/Include/: CompressionHandler.hpp  Connection.hpp  EncryptionHandler.hpp  Handler.hpp  Message.hpp  Primitives.hpp  SafeQueue.hpp  SerializationHandler.hpp  YasSerializer.hpp
IntermediateProgram/4_Networking/Server/: CMakeLists.txt
IntermediateProgram/4_Networking/Server/Server.Core/: CMakeLists.txt
IntermediateProgram/4_Networking/Server/Server.Core/Server.Core.Static/: CMakeLists.txt  Server.cpp  Server.hpp
IntermediateProgram/4_Networking/Server/Server.Exec/: CMakeLists.txt  main.cpp
IntermediateProgram/4_Networking/Utility/: CMakeLists.txt
IntermediateProgram/4_Networking/Utility/Utility.Public/: CMakeLists.txt
IntermediateProgram/4_Networking/Utility/Utility.Public/Include/Utility/: Utility.hpp
IntermediateProgram/4_Networking/Utility/Utility.Static/: CMakeLists.txt
IntermediateProgram/Include/: CopyingTool.cpp  CopyingTool.hpp  FileReader.cpp  FileReader.hpp  FileWriter.cpp  FileWriter.hpp  SafeQueue.hpp
IntermediateProgram/Network.Test/: BinarySerializeTest.cpp  CMakeLists.txt  tests.cpp
IntermediateProgram/ProcessesExecutorTests/: CMakeLists.txt  main.cpp
MemoryManagement/: CMakeLists.txt  MemoryResource.hpp  MemoryResources.hpp  main.cpp
Multithreading/: CMakeLists.txt
Multithreading/CppThreadsExamples/: CMakeLists.txt  CppThreadsExamples.hpp  main.cpp
Multithreading/PThreadExamples/: CMakeLists.txt  PThreadExamples.hpp  main.cpp
Opengl/: CMakeLists.txt  main.cpp
Opengl/HelloWindow/: CMakeLists.txt  main.cpp
RTTI/: CMakeLists.txt
conanfiles/: unix_conanfile.txt  windows_conanfile.txt
